--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "boilerplate-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
 
   "dependencies": {
     "react": "^16.4.0",
