--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "express": "^4.15.4",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
-    "react-materialize": "^2.2.1",
-    "react-router-dom": "^4.2.2"
+    "react-materialize": "^2.2.1"
   }
 }
